# note_taker

./: .gitignore  GPT_OSS_SETUP.md  Makefile  README.md  STARTUP_GUIDE.md
.cursor/rules/: no-confirm.mdc
docs/: README.md  _config.yml  api-reference.md  architecture.md  deployment.md  development.md  getting-started.md  index.md
docs/advanced/: ai-integration.md  database-schema.md  performance.md  security.md
pre-planning/: initial_ideation.md  phased_execution_plan.md  proposed_execution_plan.md
scripts/: monitor-startup.sh  note-taker.service  start-and-wait.sh
src/api/: Dockerfile  alembic.ini  dev.db  pyproject.toml
src/api/alembic/: env.py
src/api/alembic/versions/: 0001_initial.py  0002_add_categories.py  0003_cleanup_empty_conversations.py
src/api/app/: db.py  main.py
src/api/app/adapters/llm_provider/: __init__.py  base.py  ollama.py  reasoning.py
src/api/app/config/: settings.py
src/api/app/middleware/: enhanced_rate_limit.py  idempotency.py  rate_limit.py  telemetry.py
src/api/app/models/: orm.py  schemas.py
src/api/app/prompts/: README.md  __init__.py  manager.py  orchestrator.yaml
src/api/app/routes/: categories.py  classification.py  conversations.py  health.py  messages.py  notes.py  tasks.py
src/api/app/services/: orchestrator_service.py
src/api/app/telemetry/: __init__.py  logger.py
src/api/tests/: conftest.py  test_enhanced_rate_limit.py  test_health.py  test_idempotency.py  test_messages_orchestrator.py  test_notes_tasks.py  test_prompt_management.py  test_rate_limit.py  test_telemetry.py
src/frontend/: Dockerfile  (+3 more)
(+49 files in other folders)
